fixing spacing in intelliresponse box

--- a/hooks/intelliresponse.css
+++ b/hooks/intelliresponse.css
@@ -1,21 +1,13 @@
 @charset "UTF-8";
 
 .ama {
-	background-color: efaa22;
-/* 	background: URL("../uploadedImages/Content/Contact/tempbg2.jpg") no-repeat; */
-	background-size: 100% 100%;
-/* 	margin-left: auto; */
-/*  margin-right: auto; */
-/* 	margin-top:15px; */
-/* 	margin-bottom:15px; */
+/* 	background-color: #fefefe; */
 	margin: auto;
-    height: 100px;
+/*     height: 100px; */
     width: 100%;
-/*  max-width: 600px; */
 	border-radius: 7px;
 /* 	border: 2px solid #d3d3d3; */
-    padding: 2px;
-/* 	background:#d3d3d3; */
+    padding: 1em;
 	text-align: center;
 }
 
